[project]
name = "b1ddi"
version = "0.0.3"
description = "Infoblox UDDI Operational Tools"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.12,<4.0"
authors = [{ name = "Michael Ragusa", email = "mragusa@infoblox.com" }]
maintainers = [{ name = "Michael Ragusa", email = "mragusa@infoblox.com" }]
dependencies = [
  "bloxone (==0.9.0rc3)",
  "click (>=8.3.0,<9.0.0)",
  "click-option-group (>=0.5.9,<0.6.0)",
  "rich (>=14.2.0,<15.0.0)",
  "prettytable (>=3.17.0,<4.0.0)",
  "anyio (>=4.11.0,<5.0.0)",
  "build (>=1.4.2,<2.0.0)",
  "cachecontrol (>=0.14.4,<0.15.0)",
  "certifi (>=2026.2.25,<2027.0.0)",
  "cffi (==2.0.0)",
  "charset-normalizer (>=3.4.4,<4.0.0)",
  "cleo (==2.1.0)",
  "crashtest (==0.4.1)",
  "distlib (==0.4.0)",
  "dulwich (>=1.1.0,<2.0.0)",
  "fastjsonschema (==2.21.2)",
  "filelock (>=3.20.0,<4.0.0)",
  "findpython (>=0.7.1,<0.8.0)",
  "h11 (==0.16.0)",
  "httpcore (==1.0.9)",
  "httpx (==0.28.1)",
  "idna (>=3.11,<4.0)",
  "installer (==0.7.0)",
  "jaraco-classes (==3.4.0)",
  "jaraco-context (>=6.0.1)",
  "jaraco-functools (>=4.4.0,<5.0.0)",
  "keyring (>=25.7.0,<26.0.0)",
  "markdown-it-py (==4.0.0)",
  "mdurl (==0.1.2)",
  "more-itertools (==10.8.0)",
  "msgpack (>=1.1.2,<2.0.0)",
  "packaging (>=26.0,<27.0)",
  "pbs-installer (>=2026.3.25,<2027.0.0)",
  "pip-review (==1.3.0)",
  "pkginfo (==1.12.1.2)",
  "platformdirs (>=4.5.0,<5.0.0)",
  "poetry (>=2.3.3,<3.0.0)",
  "poetry-core (>=2.3.2,<3.0.0)",
  "pycparser (>=3.0,<4.0)",
  "pygments (>=2.20.0,<3.0.0)",
  "pyproject-hooks (==1.2.0)",
  "pyyaml (>=6.0.3,<7.0.0)",
  "rapidfuzz (>=3.14.2,<4.0.0)",
  "requests (>=2.33.1,<3.0.0)",
  "requests-toolbelt (==1.0.0)",
  "setuptools (>=82.0.1,<83.0.0)",
  "shellingham (==1.5.4)",
  "sniffio (==1.3.1)",
  "tomlkit (>=0.14.0,<0.15.0)",
  "trove-classifiers (>=2026.1.14.14,<2027.0.0.0)",
  "typing-extensions (==4.15.0)",
  "urllib3 (>=2.6.0)",
  "virtualenv (>=21.2.0,<22.0.0)",
  "wcwidth (>=0.6.0,<0.7.0)",
  "xattr (>=1.3.0,<2.0.0)",
  "zstandard (==0.25.0)",
  "pip (>=26.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

keywords = ["infoblox", "b1ddi", "bloxone", "uddi", "dns", "dhcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
# DHCP DDI Tools
b1-dhcp-ha = "b1ddi.bin.b1ddi-dhcp-ha:main"
b1-dhcp-ips = "b1ddi.bin.b1ddi-dhcp-ipspace:main"
b1-dhcp-opt = "b1ddi.bin.b1ddi-dhcp-options:main"
b1-dhcp-optfil = "b1ddi.bin.b1ddi-dhcp-option-filters:main"
b1-dhcp-pro = "b1ddi.bin.b1ddi-dhcp-profile:main"

# DNS DDI Tools
b1-dns-nsg = "b1ddi.bin.b1ddi-dns-nsg:main"
b1-dns-pro = "b1ddi.bin.b1ddi-dns-profile:main"
b1-dns-view = "b1ddi.bin.b1ddi-dns-view:main"

# DDI Infrastructure Tools
b1-infra = "b1ddi.bin.b1infra-host-services:main"
b1-join = "b1ddi.bin.b1ztp-join-token:main"

# Threat Defense Tools
b1-td-nl = "b1ddi.bin.b1td-named-lists:main"

[project.urls]
"github" = "https://github.com/mragusa/b1ddi"
"repository" = "https://github.com/mragusa/b1ddi.git"

[tools.setuptools]
packages = ["diagnostics"]
python_requires = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
venvPath = "."
venv = "venv"

[tool.poetry]
package-mode = true
